[package]
name = "dp"
version = "0.1.0"
authors = ["Chathura Colombage <dcdewaka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = "0.4.9"
regex = "1.3.1"
log =  { version = "0.4.8", features = ["std"] }
stderrlog =  "0.4.1"
